envoy.yaml
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 8080 }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          access_log:
          - name: envoy.file_access_log
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
              path: /dev/stdout
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: { prefix: "/api/v2/" }
                route: { cluster: api_v2_service }
              - match: { prefix: "/app/" }
                route: { cluster: nginx_service, prefix_rewrite: "/" }
              - match: { prefix: "/app" }
                redirect: { path_redirect: "/app/" }
              cors:
                allow_origin_string_match:
                - prefix: "localhost"
                - prefix: "127.0.0.1"
          http_filters:
          - name: envoy.filters.http.cors
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
          - name: envoy.filters.http.compressor
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.compressor.v3.Compressor
              response_direction_config:
                common_config:
                  content_type:
                  - application/javascript
                  - application/json
                  - application/manifest+json
                  - application/xhtml+xml
                  - image/svg+xml
                  - text/css
                  - text/html
                  - text/plain
                  - text/xml
                  - application/grpc
                  - application/grpc+proto
                  - application/grpc+json
                  - application/grpc-web
                  - application/grpc-web+proto
                  - application/grpc-web-text
                  - application/grpc-web-text+proto
              compressor_library:
                name: for_response
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.compression.gzip.compressor.v3.Gzip
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
  - name: api_v2_service
    type: LOGICAL_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: api_v2_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: api_v2
                port_value: 8080
  - name: nginx_service
    type: LOGICAL_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: nginx_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: nginx
                port_value: 80
  - name: envoy_50051_service
    type: LOGICAL_DNS
    lb_policy: ROUND_ROBIN
    http2_protocol_options: {}
    load_assignment:
      cluster_name: envoy_50051_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: envoy
                port_value: 50051
  - name: envoy_50052_service
    type: LOGICAL_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: envoy_50052_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: envoy
                port_value: 50052
